# archery-score-reader

./: .gitignore  README.md  archery_score_reader_spec_uv_python.md  pyproject.toml  synthetic_data_generation.md
.claude/: settings.local.json
docs/: aoi_fix_plan_zh.md  current_codebase_architecture.md  debug_visualize.md  detection_logic_review.md  detection_orientation_strategy.md  detection_workflow_logic.md  dev_setup.md  fake_data_sample2_detection_analysis.md  ocr_accuracy_analysis.md  openai_multimodal_poc_runbook.md  openai_poc_sample_output.csv  openai_poc_sample_output.json  pipeline_v2_spec.md  real_image_detection_analysis.md  v_sample_detection_analysis.md
notebooks/: synthetic_data_generation_walkthrough.ipynb
scripts/: init_and_generate_100.sh  run_detection_workflow.sh  run_openai_ocr_poc.sh  run_real_image_quality_check.sh
src/score_reader/: cli.py  openai_poc.py
src/score_reader/dataset/: evaluation.py  image_quality.py  models.py  pipeline.py
src/score_reader/dataset/generator/: ground_truth_generator.py  sheet_renderer.py
src/score_reader/processing/: __init__.py  csv_export.py  score_sheet_parser.py
src/score_reader/recognition/: __init__.py  models.py  ocr_engine.py
src/score_reader/visualization/: __init__.py  overlay.py
tests/unit/: test_csv_export.py  test_dataset_pipeline.py  test_score_sheet_parser.py
