[project]
name = "score-reader"
version = "0.1.0"
description = "Archery score reader"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pillow>=10.0",
  "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
score-reader = "score_reader.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
